--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,99 @@
-# Core deep-learning
-torch==2.7.1          # 04 Jun 2025 stable :contentReference[oaicite:0]{index=0}
-
-# Hugging Face ecosystem
-transformers==4.52.4  # 11 Jun 2025 latest :contentReference[oaicite:1]{index=1}
-datasets>=2.20.0
-accelerate==1.7.0     # 15 May 2025 :contentReference[oaicite:2]{index=2}
-trl==0.18.1           # 03 Jun 2025 (DPOTrainer) :contentReference[oaicite:3]{index=3}
-peft>=0.14.0          # for LoRA / merge-adapters
-
-# Quantisation & memory tricks (optional but handy on 40 GB)
-bitsandbytes>=0.43.0  # includes CUDA 12.6 wheels :contentReference[oaicite:4]{index=4}
-
-# Eval / tracking
+absl-py==2.3.0
+accelerate==1.7.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+bitsandbytes==0.46.0
+certifi==2025.4.26
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+DataProperty==1.1.0
+datasets==3.6.0
+detoxify==0.5.2
+dill==0.3.8
+distro==1.9.0
 evaluate==0.4.3
-wandb>=0.17.0
-lm-eval[all]>=0.4.4  # for benchmark evaluation
-
-# Fairness & bias evaluation
-detoxify>=0.5.2      # for toxicity detection in RealToxicityPrompts
-bias-bench>=1.1.0    # for bias evaluation
-
-# Misc
-tqdm
-sentencepiece     # some tokenisers still rely on it
+filelock==3.18.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.0
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonlines==4.0.0
+lm_eval==0.4.8
+MarkupSafe==3.0.2
+mbstrdecoder==1.1.4
+more-itertools==10.7.0
+mpmath==1.3.0
+multidict==6.4.4
+multiprocess==0.70.16
+networkx==3.5
+nltk==3.9.1
+numexpr==2.11.0
+numpy==2.3.0
+openai==1.87.0
+packaging==25.0
+pandas==2.3.0
+pathvalidate==3.3.1
+peft==0.15.2
+platformdirs==4.3.8
+portalocker==3.2.0
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+pyarrow==20.0.0
+pybind11==2.13.6
+pycountry==24.6.1
+pydantic==2.11.5
+pydantic_core==2.33.2
+pytablewriter==1.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+rouge_score==0.1.2
+sacrebleu==1.5.0
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.15.3
+sentencepiece==0.2.0
+sentry-sdk==2.30.0
+setproctitle==1.3.6
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sqlitedict==2.1.0
+sympy==1.14.0
+tabledata==1.3.4
+tcolorpy==0.1.7
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.1
+tqdm==4.67.1
+tqdm-multiprocess==0.0.11
+transformers==4.52.4
+trl==0.18.1
+typepy==1.3.4
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
+wandb==0.20.1
+word2number==1.1
+xxhash==3.5.0
+yarl==1.20.1
+zstandard==0.23.0
